# paspailleur

./: .buildinfo  Adult_Case_Study.ipynb  Makefile  Ngrams_from_IJCAI23.ipynb  README.md  algorithms_api.html  example_from_titanic.html  genindex.html  index.html  objects.inv  patterns_api.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  usage.html
.doctrees/: algorithms_api.doctree  environment.pickle  example_from_titanic.doctree  index.doctree  patterns_api.doctree  usage.doctree
.doctrees/patterns_api/: index.doctree  pattern.doctree  structures.doctree
.github/workflows/: documentation.yml
_sources/: algorithms_api.rst.txt  patterns_api.rst.txt  usage.rst.txt
_sources/patterns_api/: index.rst.txt  pattern.rst.txt  structures.rst.txt
docs/: CNAME  requirements.txt
docs/source/: algorithms_api.rst  conf.py  developer_api.rst  example_from_titanic.ipynb  index.rst  patterns_api.rst  usage.rst  user_api.rst
paspailleur/: __init__.py  datasets.py  mine_equivalence_classes.py
paspailleur/algorithms/: base_functions.py  mine_equivalence_classes.py  mine_implication_bases.py  mine_subgroups.py
paspailleur/pattern_structures/: FCA_for_nlp  __init__.py  abstract_ps.py  built_in_patterns.py  cartesian_ps.py  graph_ps.py  interval_ps.py  ngram_ps.py  nlp_ps.py  pattern.py  pattern_factory.py  pattern_structure.py  set_ps.py
patterns_api/: index.html  pattern.html  structures.html
patterns_api/built_in_patterns/: CartesianPattern.html  CategorySetPattern.html  ClosedIntervalPattern.html  IntervalPattern.html  ItemSetPattern.html  NgramSetPattern.html  index.html
tests/test_algorithms/: test_base_functions.py  test_mine_equivalence_classes.py
tests/test_pattern_structures/: test_built_in_patterns.py  test_cartesian_ps.py  test_interval_ps.py  test_ngram_ps.py  test_nlp_ps.py  test_pattern.py  test_pattern_factory.py  test_set_ps.py  (+1 more)
(+24 files in other folders)
