# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paspailleur"
version = "0.0.2"
description = "Minimalistic python package for concise representations of complex data. Part of SmartFCA project"
readme = "README.md"
authors = [{ name = "Egor Dudyrev" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["python", "fca", "itemset-mining"]
dependencies = [
    'caspailleur', 'bitarray>=2.5.1', 'tqdm',
]
requires-python = ">=3.8"


[project.urls]
Homepage = "https://github.com/EgorDudyrev/paspailleur"
