# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paspailleur"
version = "0.1.0"
description = "Pattern Structures miner in Python. An add-on for Caspailleur package. Part of SmartFCA project"
readme = "README.md"
authors = [{ name = "Egor Dudyrev" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["python", "fca", "itemset-mining"]
dependencies = [
    'caspailleur>=0.2.1', 'bitarray>=3', 'tqdm', 'deprecation', 'frozendict'
]
requires-python = ">=3.8"


[project.urls]
Homepage = "https://github.com/EgorDudyrev/paspailleur"


[tool.setuptools]
py-modules = ["paspailleur"]

[tool.setuptools.packages]
find = {}  # Scanning implicit namespaces is active by default
